<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="buffer_activity.AndroidPermisionsFragment">


    <ImageView
        android:id="@+id/Gicon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_calendar_heart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/Gwelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ApermissionsTitle"
        android:layout_below="@id/Gicon"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:gravity="center"/>

    <TextView
        android:id="@+id/Apermisssionsinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Gwelcome"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:textSize="15dp"
        android:text="@string/Apermissionsinfo"/>
    <TextView
        android:id="@+id/Apermisssionsinfo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Apermisssionsinfo"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:textSize="15dp"
        android:text="@string/Apermissionsinfo1"/>
    <TextView
        android:id="@+id/Apermisssionsinfo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Apermisssionsinfo1"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:textSize="15dp"
        android:text="@string/Apermissionsinfo2"/>
    <TextView
        android:id="@+id/Apermisssionsinfo3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Apermisssionsinfo2"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:textSize="15dp"
        android:text="Lastly, ZyterFit also requires access to location services to support Google Fitness API"/>

    <Button
        android:id="@+id/Apermissionsbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Turn on"
        android:background="@drawable/button_blue_standard"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingHorizontal="20dp"
        android:layout_margin="30dp"/>

</RelativeLayout>